# ble_ipc_framework

./: CMakeLists.txt  README.md
python_client_demo/: client.py
src/: BLEManager.cpp  BLEManager.h  IPCServer.cpp  IPCServer.h  ProtocolParser.cpp  ProtocolParser.h  main.cpp
src/Utils/: JsonHelper.cpp  JsonHelper.h  Logger.cpp  Logger.h
